# pyML

./: .gitignore  LICENSE  README.md  lr.py  main.py  perceptron.py  pyproject.toml  svm.py  基于SVM的分类算法设计与实现.docx
datasets/: negative.mat  positive.mat  stu_num.mat  year.mat
utils/: path.py
