[project]
name = "myml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.31.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.9.4",
    "scikit-learn>=1.6.1",
]

[project.scripts]
build-notebooks = "bash scripts/build_notebooks.sh"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
